--- a/customFlavour.css
+++ b/customFlavour.css
@@ -130,7 +130,7 @@
 /* Select Elements */
 .emby-select,
 .emby-select-withcolor {
-    background-color: rgba(223, 238, 234, 0.2);
+    background-color: rgba(190, 65, 65,0.2);;
 }
 
 /* Sliders */
