--- a/customFlavour.css
+++ b/customFlavour.css
@@ -390,7 +390,7 @@ body,
     color: #dfeeea;
 }
 .secondary {
-    color: #be4141;
+    color: #eeeeee;
 }
 .listItemBodyText {
     color: #c62828;
