--- a/customFlavour.css
+++ b/customFlavour.css
@@ -393,7 +393,7 @@ body,
     color: #eeeeee;
 }
 .listItemBodyText {
-    color: #c62828;
+    color: #f97c7c;
 }
 .listItemBodyText.secondary {
     color: #eeeeee;
