--- a/customFlavour.css
+++ b/customFlavour.css
@@ -387,7 +387,7 @@ a[data-role="button"]:hover {
 /* Text Colors */
 body,
 .emby-body {
-    color: #ff6f6f;
+    color: #eeeeee;
 }
 .secondary {
     color: #eeeeee;
