--- a/customFlavour.css
+++ b/customFlavour.css
@@ -355,8 +355,8 @@ a[data-role="button"]:hover {
 
 /* Slider Bubble */
 .sliderBubble {
-    color: #c03333;
-    background: #be4141;
+    color: #eeeeee;
+    background: #c03333;
 }
 
 /* Subtitle Sync */
