--- a/customFlavour.css
+++ b/customFlavour.css
@@ -402,7 +402,7 @@ body,
 /* Borders */
 .cardBox,
 .paperList {
-    border-color: #5e8b7e;
+    border-color: #c03333;
 }
 .cardScalable {
     border-color: #c03333;
