--- a/customFlavour.css
+++ b/customFlavour.css
@@ -66,7 +66,7 @@
 @media (hover: hover) and (pointer: fine) {
     .paper-icon-button-light:hover:not(:disabled) {
         color: #c03333;
-        background-color: rgba(47, 93, 98, 0.2);
+        background-color: rgb(0 0 0 / 18%);
     }
 }
 .paper-icon-button-light:hover {
