--- a/customFlavour.css
+++ b/customFlavour.css
@@ -81,7 +81,7 @@
     background-color: #00000000 !important;
 }
 .cardOverlayButtonIcon:hover {
-    background-color: rgba(167, 196, 188, 0.5) !important;
+    background-color:  rgb(0 0 0 / 18%) !important;
 }
 .cardOverlayContainer {
     background-color: rgba(0, 0, 0, 0.7);
