--- a/customFlavour.css
+++ b/customFlavour.css
@@ -47,7 +47,7 @@
 }
 .raised.emby-button:hover {
     color: #c03333;
-    background: #c9e4c5;
+    background: #eeeeee;
 }
 
 /* Delete Buttons */
@@ -246,7 +246,7 @@ a[data-role="button"]:hover {
 /* Toast Notifications */
 .toastVisible {
     color: #c03333;
-    background: #c9e4c5;
+    background: #eeeeee;
 }
 
 /* Spinners */
